# plot-diffusion-process

./: CMakeLists.txt  README.md
app/: .Window.cpp.swp  .Window.h.swp  .main.cpp.swp  CMakeLists.txt  Window.cpp  Window.h  main.cpp
cmake/: FindMuParser.cmake
qcustomplot/: CMakeLists.txt
